fix: footer wrap

--- a/src/components/__common__/button/Button.scss
+++ b/src/components/__common__/button/Button.scss
@@ -11,10 +11,10 @@
   text-transform: uppercase;
 
   &.primary {
-    outline: 4px solid;
-    outline-offset: -4px;
+    // outline: 4px solid;
+    // outline-offset: -4px;
     padding: 4px 48px;
-    outline-color: #f9f8f83b;
+    // outline-color: #f9f8f83b;
     background: $color-button-large;
     color: $text-color-primary;
     font-size: 28px;
@@ -46,10 +46,10 @@
   }
 
   &.secondary {
-    outline: 3px solid;
-    outline-offset: -3px;
+    // outline: 3px solid;
+    // outline-offset: -3px;
     padding: 2px 18px;
-    outline-color: #2e2e2e3b;
+    // outline-color: #2e2e2e3b;
     background: $color-button-small;
     color: #fff;
     font-size: 20px;
