--- a/src/components/advantage/AdvantageSection.module.scss
+++ b/src/components/advantage/AdvantageSection.module.scss
@@ -20,7 +20,7 @@
     display: flex;
     flex-direction: column;
     gap: 40px;
-    width: 30%;
+    width: 33%;
 
     ul {
       li {
