--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -107,6 +107,8 @@
     }
 
     @media (max-width: 768px) {
+      display: flex;
+      flex-wrap: wrap;
       font-size: 18px;
       line-height: 24px;
       margin-top: 34px;
